# constrained_expt

./: CMakeLists.txt  Readme.md  package.xml  test.launch
src/: Untitled.ipynb  arc_demo1.cpp  arc_demo2.cpp  arc_demo3.cpp  arc_demo4.cpp  arc_demo5.cpp  cirlce_equation.ipynb  generate_problems.cpp  results.odt  run_eval.cpp  simple_demo.cpp  simple_demo3.cpp
src/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  cirlce_equation-checkpoint.ipynb
